--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "github-fetcher-fullstack-v2",
+  "name": "simple-weather",
   "version": "1.0.0",
-  "description": "",
+  "description": "A simple weather app.",
   "main": "index.js",
   "scripts": {
     "react-dev": "webpack -d --watch",
-    "server-dev": "nodemon server/index.js"
+    "start": "nodemon server/index.js"
   },
-  "author": "Beth Johnson",
+  "author": "Jake Ascher",
   "license": "ISC",
   "devDependencies": {
     "babel-core": "^6.23.1",
