--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "react-dev": "webpack -d --watch",
-    "start": "nodemon server/index.js"
+    "start": "nodemon server/index.js",
+    "build-sass": "node-sass --watch ./client/src/styles/style.scss ./public/style.css"
   },
   "author": "Jake Ascher",
   "license": "ISC",
@@ -23,6 +24,7 @@
     "jquery": "^3.1.1",
     "mongoose": "^4.8.6",
     "mysql": "^2.13.0",
+    "node-sass": "^4.11.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2"
   }
