--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "webpack": "^2.2.1"
   },
   "dependencies": {
+    "@google/maps": "^0.5.5",
     "angular": "^1.6.3",
     "body-parser": "^1.17.2",
     "express": "^4.15.0",
