--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mongoose": "^4.8.6",
     "mysql": "^2.13.0",
     "node-sass": "^4.11.0",
+    "prop-types": "^15.7.2",
     "react": "^15.4.2",
     "react-dom": "^15.4.2"
   }
