--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "webpack-build": "webpack -p",
     "sass-build-dev": "node-sass --watch ./client/src/styles/style.scss ./public/style.css",
     "sass-build": "node-sass ./client/src/styles/style.scss ./public/style.css",
-    "start-local": "NODE_ENV='dev' nodemon -r dotenv/config server/server-local.js",
+    "start-local": "nodemon -r dotenv/config server/server-local.js",
     "build": "npm run webpack-build && npm run sass-build && netlify-lambda build functions"
   },
   "author": "Jake Ascher",
