--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "devDependencies": {
     "babel-core": "^6.23.1",
+    "babel-eslint": "^10.1.0",
     "babel-loader": "^6.3.2",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
@@ -32,7 +33,7 @@
     "body-parser": "^1.17.2",
     "express": "^4.15.0",
     "netlify-lambda": "^1.6.3",
-    "node-sass": "^4.12.0",
+    "node-sass": "^4.13.1",
     "prop-types": "^15.7.2",
     "react": "^15.4.2",
     "react-dom": "^15.4.2"
